# DevTradeTest

./: README.md  docker-compose.yml  params.json
.deepcode/: settings.json
backend/ai/: .env.ai.example  .env.ai.fast.example  Dockerfile.ai  config.py  db.py  main.py  models.py  requirements.txt
backend/ai/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  groq_provider.py  openai_provider.py  utils.py
backend/api/: main.py  requirements.txt  router.py
backend/api/endpoints/: ai.py  core.py  health.py  sandbox.py  users.py
backend/api/utils/: auth.py  cache.py
backend/core/: CMakeLists.txt  Dockerfile.core  vcpkg.json
backend/core/src/: DB_pool.hpp  config.hpp  main.cpp
backend/core/src/Data_stream/: History_data.cpp  History_data.hpp  Live_data.cpp  Live_data.hpp  Threads.cpp  Threads.hpp
backend/core/src/Handlers/: Candles_data.cpp  Candles_data.hpp
backend/core/src/Routes/: Routes.cpp  Routes.hpp
backend/core/tests/: Test.cpp
backend/sandbox/: Dockerfile.runner  Dockerfile.sandbox  requirements.txt
backend/sandbox/app/: backtester.py  db.py  main.py  pypine.py  runner.py  strategy_example.py
backend/users/: Dockerfile.users  requirements.txt
database/ai/: init.sql
database/candle/: init.sql
database/users/: init.sql
docs/: ai.md  api.md  core.md  database.md  devnotes.md  pypinelib.md  sandbox.md  users.md
frontend/: Dockerfile.frontend  index.html  nginx.frontend.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
nginx/: nginx.conf
(+56 files in other folders)
